# tray-weather

./: Cargo.toml  README.md  build.rs
assets/: convert_svg_to_ico.sh  resources.rc
assets/tabler-icons/: README.md
assets/weathericons/: export_icons.sh
assets/weathericons/metno/: README.md
assets/weathericons/monochrome/: README.md
locales/: de.yml  en.yml
src/: app.rs  error.rs  gui.rs  main.rs  settings.rs  settings_window.rs  weather.rs
src/gui/: forecast_window.rs  mod.rs  settings_window.rs  weather_tray_icon.rs
tests/data/: weather_response_forecast.json
