[package]
name = "tray-weather"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
embed-resource = "2.4.3"

[dependencies]
async-winit = "0.2.1"
tray-icon = "0.17.0"
reqwest = { version = "0.12.7", features = ["json"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["full"] }
log = "0.4.22"
env_logger = "0.11.5"
