[package]
name = "tray-weather"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
embed-resource = "2.4.3"

[dependencies]
async-winit = "0.2.1"
tray-icon = "0.19.0"
reqwest = { version = "0.12.7", features = ["json"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
toml = "0.8.19"
tokio = { version = "1.40.0", features = ["full"] }
log = "0.4.22"
env_logger = "0.11.5"
eframe = { version = "0.28.1" }
egui-wgpu = "0.28.1"
# vizia = { git = "https://github.com/vizia/vizia", rev = "7dccf72a9fe4e2c15569ce453e547fce49e20032" }
directories = "5.0.1"
auto-launch = "0.5.0"
rust-i18n = "3.1.2"
sys-locale = "0.3.1"
